--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -16,9 +16,10 @@ dependencies {
     implementation 'org.firstinspires.ftc:FtcCommon:10.3.0'
     implementation 'org.firstinspires.ftc:Vision:10.3.0'
     implementation 'androidx.appcompat:appcompat:1.7.1'
-    implementation 'com.pedropathing:ftc:2.0.0'
+    implementation 'com.pedropathing:ftc:2.0.4'
     implementation 'com.pedropathing:telemetry:0.0.6'
     implementation 'com.bylazar:fullpanels:1.0.2'
     implementation 'com.acmerobotics.dashboard:dashboard:0.4.16'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
 }
 
