--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -20,5 +20,6 @@ dependencies {
     implementation 'com.bylazar:fullpanels:1.0.2'
     implementation 'com.acmerobotics.dashboard:dashboard:0.4.16'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
+    implementation 'org.apache.commons:commons-math3:3.6.1'
 }
 
